--- a/misc/pom.xml
+++ b/misc/pom.xml
@@ -16,6 +16,7 @@
 
     <name>${project.groupId} - ${project.artifactId}</name>
     <description>Parent für alles was sonst nirgendwo reingehört.</description>
+    <inceptionYear>2012</inceptionYear>
 
     <modules>
         <module>misc-cache</module>
