--- a/cellular-machines/gradle.properties
+++ b/cellular-machines/gradle.properties
@@ -1,5 +1,4 @@
 group = de.freese
 version = 0.0.1-SNAPSHOT
 
-description = Beispiele für zellulare Automaten (cellular machines).
-
+description = Beispiele fÃ¼r zellulare Automaten (cellular machines).
