--- a/misc/misc-genetic-algorithm/gradle.properties
+++ b/misc/misc-genetic-algorithm/gradle.properties
@@ -4,5 +4,5 @@ archiveVersion = 0.0.1-SNAPSHOT
 description = Genetic Algorythms
 #mainClassName = de.freese.gradle.Main
 
-# Workaround für Bug in startScripts das kein mainClassName gefunden wird.
+# Workaround fÃ¼r Bug in startScripts das kein mainClassName gefunden wird.
 #mainClass = de.freese.gradle.Main
