--- a/misc/misc-jsensors/src/test/resources/simplelogger.properties
+++ b/misc/misc-jsensors/src/test/resources/simplelogger.properties
@@ -1,4 +1,4 @@
-# TRACE, DEBUG, INFO, WARN, ERROR, INFO
+# TRACE, DEBUG, INFO, WARN, ERROR, OFF
 org.slf4j.simpleLogger.defaultLogLevel = OFF
 org.slf4j.simpleLogger.levelInBrackets = false
 org.slf4j.simpleLogger.logFile = System.out
