--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <modules>
         <module>binding</module>
         <module>cellular-machines</module>
+        <module>maven-proxy</module>
         <module>meta-model</module>
         <module>misc</module>
     </modules>
