--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -4,12 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>de.freese.misc</groupId>
-        <artifactId>misc</artifactId>
+        <groupId>de.freese</groupId>
+        <artifactId>maven-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>misc-maven-proxy</artifactId>
+    <artifactId>maven-proxy</artifactId>
     <packaging>jar</packaging>
 
     <name>${project.groupId} - ${project.artifactId}</name>
@@ -98,7 +99,7 @@
         <!-- compile scope -->
         <!--        <dependency>-->
         <!--            <groupId>com.sun.activation</groupId>-->
-        <!--            <artifactId>jakarta.activation-api</artifactId>-->
+        <!--            <artifactId>jakarta.activation</artifactId>-->
         <!--        </dependency>-->
         <!--        <dependency>-->
         <!--            <groupId>jakarta.activation</groupId>-->
