--- a/misc/misc-sudoku/build.gradle
+++ b/misc/misc-sudoku/build.gradle
@@ -1,4 +1,4 @@
-description = "Genetic Algorythms"
+description = "Sodoku Generator"
 
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-engine")
