--- a/binding/build.gradle
+++ b/binding/build.gradle
@@ -1,14 +1,8 @@
 plugins {
     id "java-library"
-    id "io.spring.dependency-management" version "$version_springDependencyManagement"
-    id "de.freese.gradle.plugin.conventions" version "0.0.1-SNAPSHOT"
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.boot:spring-boot-dependencies:$version_springBoot"
-    }
-}
+description = "An alternative for Swing like the Binding in JavaFX."
 
 dependencies {
     api("org.slf4j:slf4j-api")
