--- a/maven-proxy/build.gradle
+++ b/maven-proxy/build.gradle
@@ -1,15 +1,8 @@
 plugins {
-    id "java"
-    id "org.springframework.boot" version "$version_springBoot"
-    id "io.spring.dependency-management" version "$version_springDependencyManagement"
-    id "de.freese.gradle.plugin.conventions" version "0.0.1-SNAPSHOT"
+    id "org.springframework.boot"
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.boot:spring-boot-dependencies:$version_springBoot"
-    }
-}
+description = "Einfache Implementierung eines virtuellen Repositories."
 
 dependencies {
     implementation("org.slf4j:slf4j-api")
