--- a/misc/misc-sonstiges/pom.xml
+++ b/misc/misc-sonstiges/pom.xml
@@ -58,10 +58,14 @@
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>jakarta.mail</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>jakarta.mail</groupId>-->
+        <!--            <artifactId>jakarta.mail-api</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.eclipse.angus</groupId>-->
+        <!--            <artifactId>jakarta.mail</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
@@ -151,7 +155,7 @@
 			</dependency-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-mail</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
