--- a/maven-proxy/build.gradle
+++ b/maven-proxy/build.gradle
@@ -17,9 +17,11 @@ dependencies {
 // The archive name. If the name has not been explicitly set, the pattern for the name is:
 // [archiveBaseName]-[archiveAppendix]-[archiveVersion]-[archiveClassifier].[archiveExtension]
 // archiveFileName = "my-boot.jar"
-bootJar {
+springBoot {
     mainClass = "de.freese.maven.proxy.MavenProxyLauncher"
+}
 
+bootJar {
     archiveClassifier = "spring"
     archiveFileName = "${archiveBaseName.get()}-${archiveClassifier.get()}.${archiveExtension.get()}"
     destinationDirectory = file("${projectDir}/app")
