--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <name>${project.groupId} - ${project.artifactId}</name>
-    <description>Einfache Implementierung eines virtuellen Repositories</description>
+    <description>Basic Implemention of a Maven-Proxy.</description>
 
     <build>
         <plugins>
@@ -97,14 +97,6 @@
 
     <dependencies>
         <!-- compile scope -->
-        <!--        <dependency>-->
-        <!--            <groupId>com.sun.activation</groupId>-->
-        <!--            <artifactId>jakarta.activation</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.activation</groupId>-->
-        <!--            <artifactId>jakarta.activation-api</artifactId>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
