--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 
     <scm>
         <url>${project.url}</url>
-        <connection>scm:git:git://github.com/tfreese/java.git</connection>
-        <developerConnection>scm:git:https://github.com/tfreese/java.git</developerConnection>
+        <connection>scm:git:git@github.com/tfreese/java.git</connection>
+        <developerConnection>scm:git:git@github.com/tfreese/java.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
