--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <name>${project.groupId} - ${project.artifactId}</name>
-    <description>Basic Implemention of a Maven-Proxy.</description>
+    <description>Basic Implementation of a Maven-Proxy.</description>
 
     <build>
         <plugins>
