--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -5,9 +5,8 @@
 
     <parent>
         <groupId>de.freese</groupId>
-        <artifactId>maven-parent</artifactId>
+        <artifactId>java</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>maven-proxy</artifactId>
