--- a/misc/misc-sonstiges/build.gradle
+++ b/misc/misc-sonstiges/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation("io.projectreactor:reactor-test")
     implementation("jakarta.json.bind:jakarta.json.bind-api")
     implementation("org.apache.commons:commons-compress")
+    implementation("org.apache.commons:commons-lang3")
     implementation("org.apache.logging.log4j:log4j-to-slf4j")
     implementation("org.apache.lucene:lucene-analyzers-common")
     implementation("org.apache.xmlgraphics:batik-codec")
