--- a/maven-proxy/src/main/resources/simplelogger.properties
+++ b/maven-proxy/src/main/resources/simplelogger.properties
@@ -10,6 +10,8 @@ org.slf4j.simpleLogger.dateTimeFormat = HH:mm:ss:SSS
 #org.slf4j.simpleLogger.dateTimeFormat = yyyy-MM-dd HH:mm:ss:SSS
 
 org.slf4j.simpleLogger.log.de.freese = INFO
+org.slf4j.simpleLogger.log.de.freese.maven.proxy.repository.http.JreHttpClientRepository = INFO
+org.slf4j.simpleLogger.log.de.freese.maven.proxy.repository.file.FileRepository = INFO
 org.slf4j.simpleLogger.log.de.freese.maven.proxy.jreserver.MavenProxyHandler = INFO
 
 #org.slf4j.simpleLogger.log.org.springframework.jdbc.core.JdbcTemplate = DEBUG
