--- a/misc/misc-junit5/build.gradle
+++ b/misc/misc-junit5/build.gradle
@@ -2,8 +2,7 @@ description = "Demos für JUnit5"
 
 dependencies {
     testImplementation("org.assertj:assertj-core")
-    testImplementation("org.junit.jupiter:junit-jupiter-engine")
-    testImplementation("org.junit.jupiter:junit-jupiter-params")
+    testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.junit.platform:junit-platform-suite-api")
     testImplementation("org.junit.vintage:junit-vintage-engine")
     testImplementation("org.mockito:mockito-junit-jupiter")
