--- a/misc/misc-micrometer/build.gradle
+++ b/misc/misc-micrometer/build.gradle
@@ -7,5 +7,5 @@ dependencies {
 
     runtimeOnly("org.slf4j:slf4j-simple")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter")
 }
