--- a/misc/misc-sonstiges/build.gradle
+++ b/misc/misc-sonstiges/build.gradle
@@ -46,7 +46,6 @@ dependencies {
     }
     testImplementation("org.apache.tomcat:tomcat-juli")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-engine")
-    testImplementation("org.junit.jupiter:junit-jupiter-params")
+    testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.mockito:mockito-junit-jupiter")
 }
