--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,6 @@ subprojects {
 
     dependencies {
         //implementation(platform("de.freese:maven-bom:$version_mavenBom"))
-        //testImplementation("org.junit.jupiter:junit-jupiter-engine")
+        //testImplementation("org.junit.jupiter:junit-jupiter")
     }
 }
