--- a/cellular-machines/pom.xml
+++ b/cellular-machines/pom.xml
@@ -41,22 +41,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                    <mainClass>de.freese.simulationen.SimulationLauncher</mainClass>
-                    <outputDirectory>app</outputDirectory>
-                    <finalName>${project.artifactId}</finalName>
-                    <classifier>spring</classifier>
-                    <includeSystemScope>true</includeSystemScope>
-                    <layout>ZIP</layout>
-                    <jvmArguments>
-                        -Xms32m
-                        -Xmx512m
-                        -XX:TieredStopAtLevel=1
-                        -Djava.security.egd=file:/dev/./urandom
-                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
-                    </jvmArguments>
-                </configuration>
                 <executions>
                     <execution>
                         <id>repackage</id>
@@ -66,6 +50,20 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <skip>false</skip>
+                    <mainClass>de.freese.simulationen.SimulationLauncher</mainClass>
+                    <outputDirectory>app</outputDirectory>
+                    <classifier>spring</classifier>
+                    <includeSystemScope>true</includeSystemScope>
+                    <jvmArguments>
+                        -Xms32m
+                        -Xmx512m
+                        -XX:TieredStopAtLevel=1
+                        -Djava.security.egd=file:/dev/./urandom
+                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+                    </jvmArguments>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -182,8 +180,8 @@
                 <executions>
                     <execution>
                         <id>shade uberjar</id>
-                        <phase>package</phase>
-                        <!--phase>none</phase-->
+                        <!--                        <phase>package</phase>-->
+                        <phase>none</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
