--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -16,6 +16,8 @@
     <description>Basic Implementation of a Maven-Proxy.</description>
 
     <build>
+        <!--        <finalName>${project.artifactId}</finalName>-->
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,23 +42,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                    <mainClass>de.freese.maven.proxy.MavenProxyLauncher</mainClass>
-                    <outputDirectory>app</outputDirectory>
-                    <finalName>${project.artifactId}</finalName>
-                    <classifier>spring</classifier>
-                    <includeSystemScope>true</includeSystemScope>
-                    <layout>ZIP</layout>
-                    <jvmArguments>
-                        -Dmavenproxy.port=7999
-                        -Xms32m
-                        -Xmx64m
-                        -XX:TieredStopAtLevel=1
-                        -Djava.security.egd=file:/dev/./urandom
-                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
-                    </jvmArguments>
-                </configuration>
                 <executions>
                     <execution>
                         <id>repackage</id>
@@ -66,6 +51,21 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <skip>false</skip>
+                    <mainClass>de.freese.maven.proxy.MavenProxyLauncher</mainClass>
+                    <outputDirectory>app</outputDirectory>
+                    <classifier>spring</classifier>
+                    <includeSystemScope>true</includeSystemScope>
+                    <jvmArguments>
+                        -Dmavenproxy.port=7999
+                        -Xms32m
+                        -Xmx64m
+                        -XX:TieredStopAtLevel=1
+                        -Djava.security.egd=file:/dev/./urandom
+                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+                    </jvmArguments>
+                </configuration>
             </plugin>
             <plugin>
                 <!-- MUSS nach dem spring-Plugin definiert werden, da Maven die Plugins nach ihrer -->
@@ -84,8 +84,10 @@
                         </goals>
                         <configuration>
                             <target>
-                                <!--echo>copy to /opt/jvmapps/maven-proxy: ${project.artifactId}-spring.jar</echo-->
-                                <copy overwrite="true" verbose="true" file="app/${project.artifactId}-spring.jar" todir="/opt/jvmapps/maven-proxy" />
+                                <copy overwrite="true"
+                                      verbose="true"
+                                      file="app/${project.artifactId}-${project.version}-spring.jar"
+                                      tofile="/opt/jvmapps/maven-proxy/maven-proxy.jar" />
                             </target>
                         </configuration>
                     </execution>
