--- a/misc/misc-sonstiges/pom.xml
+++ b/misc/misc-sonstiges/pom.xml
@@ -54,6 +54,7 @@
                 <executions>
                     <execution>
                         <id>xjc</id>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>xjc</goal>
                         </goals>
