--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -15,9 +15,73 @@
     <name>${project.groupId} - ${project.artifactId}</name>
     <description>Basic Implementation of a Maven-Proxy.</description>
 
+    <profiles>
+        <profile>
+            <id>copy-to-apps</id>
+            <build>
+                <plugins>
+                    <!-- spring-boot:run -->
+                    <!-- spring-boot:repackage für executable jar -->
+                    <!-- mvn package enthält hiermit schon spring-boot:repackage-->
+                    <!-- mvn spring-boot:run -Dspring-boot.run.jvmArguments="-Dmavenproxy.fileCache=/mnt/ssd850/maven-proxy/repository" -->
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>repackage</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <mainClass>de.freese.maven.proxy.MavenProxyLauncher</mainClass>
+                            <outputDirectory>app</outputDirectory>
+                            <classifier>spring</classifier>
+                            <includeSystemScope>true</includeSystemScope>
+                            <jvmArguments>
+                                -Dmavenproxy.port=7999
+                                -Xms32m
+                                -Xmx64m
+                                -XX:TieredStopAtLevel=1
+                                -Djava.security.egd=file:/dev/./urandom
+                                -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+                            </jvmArguments>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>deploy-artifacts</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>false</skip>
+                                    <target>
+                                        <copy file="app/${project.artifactId}-${project.version}-spring.jar"
+                                              tofile="/opt/jvmapps/maven-proxy/maven-proxy.jar"
+                                              overwrite="true"
+                                              verbose="true"
+                                        />
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <!--        <finalName>${project.artifactId}</finalName>-->
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -35,60 +99,31 @@
                     </filesets>
                 </configuration>
             </plugin>
-            <!-- spring-boot:run -->
-            <!-- spring-boot:repackage für executable jar -->
-            <!-- mvn package enthält hiermit schon spring-boot:repackage-->
-            <!-- mvn spring-boot:run -Dspring-boot.run.jvmArguments="-Dmavenproxy.fileCache=/mnt/ssd850/maven-proxy/repository" -->
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <!-- jaxb2:xjc -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>repackage</id>
-                        <phase>package</phase>
+                        <id>xjc</id>
+                        <phase>generate-sources</phase>
                         <goals>
-                            <goal>repackage</goal>
+                            <goal>xjc</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <skip>false</skip>
-                    <mainClass>de.freese.maven.proxy.MavenProxyLauncher</mainClass>
-                    <outputDirectory>app</outputDirectory>
-                    <classifier>spring</classifier>
-                    <includeSystemScope>true</includeSystemScope>
-                    <jvmArguments>
-                        -Dmavenproxy.port=7999
-                        -Xms32m
-                        -Xmx64m
-                        -XX:TieredStopAtLevel=1
-                        -Djava.security.egd=file:/dev/./urandom
-                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
-                    </jvmArguments>
+                    <sources>
+                        <source>${project.basedir}/src/main/resources/proxy-config.xsd</source>
+                    </sources>
+                    <xjbSources>
+                        <xjbSource>${project.basedir}/src/main/xsd/schema.xjb</xjbSource>
+                    </xjbSources>
+                    <packageName>de.freese.maven.proxy.config</packageName>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+                    <readOnly>true</readOnly>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>deploy-artifacts</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <skip>false</skip>
-                            <target>
-                                <copy file="app/${project.artifactId}-${project.version}-spring.jar"
-                                      tofile="/opt/jvmapps/maven-proxy/maven-proxy.jar"
-                                      overwrite="true"
-                                      verbose="true"
-                                />
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
@@ -96,11 +131,20 @@
     <dependencies>
         <!-- compile scope -->
         <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <!-- runtime scope -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
