--- a/maven-proxy/pom.xml
+++ b/maven-proxy/pom.xml
@@ -107,9 +107,9 @@
                         <resource>
                             <!-- Additional Folders overwrite the Defaults. -->
                             <directory>${project.basedir}/src/main/resources</directory>
-                            <excludes>
-                                <exclude>proxy-config.xml</exclude>
-                            </excludes>
+                            <!--                            <excludes>-->
+                            <!--                                <exclude>proxy-config.xml</exclude>-->
+                            <!--                            </excludes>-->
                         </resource>
                         <resource>
                             <directory>${project.basedir}//src/main/xsd</directory>
@@ -131,6 +131,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skipXjc>false</skipXjc>
                     <sources>
                         <source>${project.basedir}/src/main/xsd/proxy-config.xsd</source>
                     </sources>
