--- a/cellular-machines/pom.xml
+++ b/cellular-machines/pom.xml
@@ -51,7 +51,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <skip>false</skip>
+                    <skip>true</skip>
                     <mainClass>de.freese.simulationen.SimulationLauncher</mainClass>
                     <outputDirectory>app</outputDirectory>
                     <classifier>spring</classifier>
