--- a/settings.gradle
+++ b/settings.gradle
@@ -7,15 +7,16 @@ include "jsensors"
 include "maven-proxy"
 include "meta-model"
 
-file("${rootDir}/misc").eachDirMatch(~/misc-.*/) {
-    include "misc:${it.name}"
-}
+//file("${rootDir}/misc").eachDirMatch(~/misc-.*/) {
+//    include "misc:${it.name}"
+//}
 
-//include "misc:misc-cache"
-//include "misc:misc-genetic-algorithm"
-//include "misc:misc-jconky"
-//include "misc:misc-junit5"
-//include "misc:misc-micrometer"
-//include "misc:misc-openstreetmap"
-//include "misc:misc-sonstiges"
-//include "misc:misc-sudoku"
+include "misc:misc-cache"
+include "misc:misc-genetic-algorithm"
+include "misc:misc-jconky"
+include "misc:misc-junit5"
+include "misc:misc-micrometer"
+include "misc:misc-openstreetmap"
+//include "misc:misc-protobuf"
+include "misc:misc-sonstiges"
+include "misc:misc-sudoku"
