--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,6 @@ include "misc:misc-jconky"
 include "misc:misc-junit5"
 include "misc:misc-micrometer"
 include "misc:misc-openstreetmap"
-//include "misc:misc-protobuf"
+include "misc:misc-protobuf"
 include "misc:misc-sonstiges"
 include "misc:misc-sudoku"
