--- a/misc/misc-protobuf/pom.xml
+++ b/misc/misc-protobuf/pom.xml
@@ -93,6 +93,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- runtime scope -->
