--- a/misc/misc-sonstiges/build.gradle
+++ b/misc/misc-sonstiges/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     implementation("org.apache.xmlgraphics:batik-codec")
     implementation("org.apache.xmlgraphics:batik-swing")
     implementation("org.apache.xmlgraphics:batik-transcoder")
+    implementation("org.apache.velocity:velocity-engine-core")
     implementation("org.codehaus.plexus:plexus-cipher")
     implementation("org.codehaus.plexus:plexus-container-default")
+    implementation("org.freemarker:freemarker")
     implementation("org:jaudiotagger")
     implementation("org.hsqldb:hsqldb")
     implementation("org.jsoup:jsoup")
