--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include "misc:misc-cache"
 include "misc:misc-genetic-algorithm"
 include "misc:misc-jconky"
 include "misc:misc-junit5"
+include "misc:misc-led"
 include "misc:misc-micrometer"
 include "misc:misc-openstreetmap"
 include "misc:misc-protobuf"
