--- a/misc/misc-sonstiges/pom.xml
+++ b/misc/misc-sonstiges/pom.xml
@@ -127,6 +127,18 @@
             <groupId>jakarta.json.bind</groupId>
             <artifactId>jakarta.json.bind-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+        </dependency>
         <!-- Implementierung von jakarta.json.bind:jakarta.json.bind-api -->
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
@@ -150,6 +162,10 @@
             <artifactId>lucene-analyzers-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-codec</artifactId>
         </dependency>
@@ -158,16 +174,8 @@
             <artifactId>batik-swing</artifactId>
         </dependency>
         <dependency>
-            <groupId>org</groupId>
-            <artifactId>jaudiotagger</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
