--- a/misc/misc-openstreetmap/build.gradle
+++ b/misc/misc-openstreetmap/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "java"
+}
+
 description = "Projekt für das Rendern von GEO Daten von http://www.openstreetmap.org"
 
 dependencies {
