--- a/jsensors/build.gradle
+++ b/jsensors/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "java"
+}
+
 description = "Sensor-Application for System-Monitoring (simplified micrometer clone)"
 
 dependencies {
