--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,12 @@
-// Ohne rootProject.name würde der Name des Projekt-Verzeichnisses verwendet werden.
+pluginManagement {
+    repositories {
+        mavenCentral()
+        gradlePluginPortal()
+        mavenLocal()
+    }
+}
+
+// Without rootProject.name the Name of the Projekt-Directory is used.
 rootProject.name = "java"
 
 include "binding"
